// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleMatcher OptionsPanel rendering autoWww false renders 1`] = `
<withStyles(FormControl)
  fullWidth={true}
>
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="autoWww"
    label="Ignore www. prefix"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="matchInSubDirs"
    label="Also match in subdirectories"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="ignoreLastPart"
    label="Ignore the last part of the password path (if you are using it as your login name)"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="requireFullMatch"
    label="Require exact match"
  />
</withStyles(FormControl)>
`;

exports[`SimpleMatcher OptionsPanel rendering default values renders 1`] = `
<withStyles(FormControl)
  fullWidth={true}
>
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="autoWww"
    label="Ignore www. prefix"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="matchInSubDirs"
    label="Also match in subdirectories"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="ignoreLastPart"
    label="Ignore the last part of the password path (if you are using it as your login name)"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="requireFullMatch"
    label="Require exact match"
  />
</withStyles(FormControl)>
`;

exports[`SimpleMatcher OptionsPanel rendering ignoreLastPart true renders 1`] = `
<withStyles(FormControl)
  fullWidth={true}
>
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="autoWww"
    label="Ignore www. prefix"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="matchInSubDirs"
    label="Also match in subdirectories"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="ignoreLastPart"
    label="Ignore the last part of the password path (if you are using it as your login name)"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="requireFullMatch"
    label="Require exact match"
  />
</withStyles(FormControl)>
`;

exports[`SimpleMatcher OptionsPanel rendering matchInSubDirs true renders 1`] = `
<withStyles(FormControl)
  fullWidth={true}
>
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="autoWww"
    label="Ignore www. prefix"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="matchInSubDirs"
    label="Also match in subdirectories"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="ignoreLastPart"
    label="Ignore the last part of the password path (if you are using it as your login name)"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="requireFullMatch"
    label="Require exact match"
  />
</withStyles(FormControl)>
`;

exports[`SimpleMatcher OptionsPanel rendering requireFullMatch true renders 1`] = `
<withStyles(FormControl)
  fullWidth={true}
>
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="autoWww"
    label="Ignore www. prefix"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="matchInSubDirs"
    label="Also match in subdirectories"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={false}
        onChange={[Function]}
      />
    }
    id="ignoreLastPart"
    label="Ignore the last part of the password path (if you are using it as your login name)"
  />
  <withStyles(FormControlLabel)
    control={
      <withStyles(Checkbox)
        checked={true}
        onChange={[Function]}
      />
    }
    id="requireFullMatch"
    label="Require exact match"
  />
</withStyles(FormControl)>
`;
